fix for bug #382221: Dragging bookmark on toolbar doesn't give permanent resultwe need to adjust the indices before we make the change to the item we aremoving, otherwise, our we'll impact the index of the item we are moving.r=dietrich